# disneyficiationifier

./: .pre-commit-config.yaml  Dockerfile  readme.md  setup.cfg
