[metadata]
name=dsny

[options]
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    platformdirs>=2,<4
    configupdater>=3.0,<4  # pyscaffoldext-custom-extension should have a compatible range
    setuptools>=46.1.0
    setuptools_scm>=5
    tomlkit>=0.7.0,<2
    packaging>=20.7
    colorama>=0.4.4; sys_platform == "win32"

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
develpoment =
    setuptools
    setuptools_scm[toml]
    wheel
    build
    tomlkit     # as dependency in `-e fast`
    certifi     # tries to prevent certificate problems on windows
    tox         # system tests use tox inside tox
    pre-commit  # system tests run pre-commit
    sphinx      # system tests build docs
    flake8      # system tests run flake8
    virtualenv  # virtualenv as dependency for the venv extension in `-e fast`
    pytest
    pytest-cov
    pytest-xdist
    pytest-randomly


[tool:pytest]
addopts =
    --cov pyscaffold --cov-config .coveragerc --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
log_level = DEBUG
log_cli = True
log_cli_level = CRITICAL
junit_family = xunit2

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    src/pyscaffold/contrib
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True